syntax = "proto3";

package infraboard.mcenter.domain;
option go_package = "github.com/infraboard/mcenter/apps/domain";

message FeishuConfig {
    // 开启飞书认证
    // @gotags: bson:"enabled" json:"enabled"
    bool enabled = 4;
    // 飞书应用凭证, Oauth2.0时 也叫client_id
    // @gotags: bson:"app_id" json:"app_id" env:"FEISHU_APP_ID"
    string app_id = 1;
    // 飞书应用凭证, Oauth2.0时 也叫client_secret
    // @gotags: bson:"app_secret" json:"app_secret" env:"FEISHU_APP_SECRET" mask:",3,2"
    string app_secret = 2;
    // Oauth2.0时, 应用服务地址页面
    // @gotags: bson:"redirect_uri" json:"redirect_uri" env:"FEISHU_REDIRECT_URI"
    string redirect_uri = 3;
}